--- a/Source.RichCC/Source.RichCC/Source.RichCC.csproj
+++ b/Source.RichCC/Source.RichCC/Source.RichCC.csproj
@@ -72,6 +72,7 @@
     <Content Include="packages.config" />
     <Content Include="package.json" />
     <Content Include="resource\arrowImgSprite.png" />
+    <Content Include="resource\datepicker\month-event.html" />
     <Content Include="resource\datepicker\monthviewer.html" />
     <Content Include="resource\datepicker\monthviewerdaymarker.html" />
     <Content Include="resource\datepicker\richcc-day-popup.html" />
@@ -107,7 +108,7 @@
     <Content Include="dist\js\demo.js" />
     <Content Include="resource\datepicker\datepicker.html" />
     <Content Include="resource\datepicker\day.html" />
-    <Content Include="resource\datepicker\month.html" />
+    <Content Include="resource\datepicker\month-heat.html" />
     <Content Include="resource\datepicker\popup.html" />
     <Content Include="resource\datepicker\year.html" />
     <Content Include="resource\richcc.js" />
