--- a/Source.RichCC/Source.RichCC/Source.RichCC.csproj
+++ b/Source.RichCC/Source.RichCC/Source.RichCC.csproj
@@ -77,6 +77,7 @@
     <Content Include="resource\datepicker\monthHeatViewer.html" />
     <Content Include="resource\datepicker\monthviewerdaymarker.html" />
     <Content Include="resource\datepicker\richcc-day-popup.html" />
+    <Content Include="resource\datepicker\richcc-month-popup.html" />
     <Content Include="scss\richcc.scss" />
     <Content Include="dist\min\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="dist\min\fonts\glyphicons-halflings-regular.ttf" />
