--- a/Source.RichCC/Source.RichCC/Source.RichCC.csproj
+++ b/Source.RichCC/Source.RichCC/Source.RichCC.csproj
@@ -67,7 +67,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="lib\angular-animate.min.js" />
-    <Content Include="lib\ui-bootstrap-tpls-1.1.1.js" />
     <Content Include="lib\ui-bootstrap-tpls-1.1.1.min.js" />
     <Content Include="packages.config" />
     <Content Include="package.json" />
@@ -102,18 +101,14 @@
     <Content Include="lib\angular.min.js" />
     <Content Include="lib\bootstrap.min.js" />
     <Content Include="lib\jquery.min.js" />
-    <Content Include="lib\ui-bootstrap-tpls.min.js" />
     <Content Include="lib\underscore-min.js" />
-    <Content Include="resource\datepicker\datepicker.css" />
-    <Content Include="resource\datepicker\datepicker.js" />
-    <Content Include="resource\demo.html" />
     <Content Include="dist\js\demo.js" />
     <Content Include="resource\datepicker\datepicker.html" />
     <Content Include="resource\datepicker\day.html" />
     <Content Include="resource\datepicker\monthHeatWrap.html" />
     <Content Include="resource\datepicker\popup.html" />
     <Content Include="resource\datepicker\year.html" />
-    <Content Include="resource\richcc.js" />
+    <Content Include="resource\datepicker\richcc.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -121,7 +116,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\PublishProfiles\" />
-    <Folder Include="resource\bootstrap-master\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
