--- a/Source.RichCC/Source.RichCC/Source.RichCC.csproj
+++ b/Source.RichCC/Source.RichCC/Source.RichCC.csproj
@@ -66,6 +66,11 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="images\1.png" />
+    <Content Include="images\2.png" />
+    <Content Include="images\3.png" />
+    <Content Include="images\4.png" />
+    <Content Include="images\5.png" />
     <Content Include="lib\angular-animate.min.js" />
     <Content Include="lib\ui-bootstrap-tpls-1.1.1.min.js" />
     <Content Include="packages.config" />
