--- a/Source.RichCC/Source.RichCC/Source.RichCC.csproj
+++ b/Source.RichCC/Source.RichCC/Source.RichCC.csproj
@@ -117,6 +117,7 @@
     <Content Include="resource\datepicker\popup.html" />
     <Content Include="resource\datepicker\year.html" />
     <Content Include="resource\richcc.js" />
+    <Content Include="someCustomPopUp.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
