--- a/Source.RichCC/Source.RichCC/Source.RichCC.csproj
+++ b/Source.RichCC/Source.RichCC/Source.RichCC.csproj
@@ -72,7 +72,6 @@
     <Content Include="images\4.png" />
     <Content Include="images\5.png" />
     <Content Include="lib\angular-animate.min.js" />
-    <Content Include="lib\angular-workers.min.js" />
     <Content Include="lib\ui-bootstrap-tpls-1.1.1.min.js" />
     <Content Include="packages.config" />
     <Content Include="package.json" />
@@ -136,7 +135,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>False</UseIIS>
+          <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>32603</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
