--- a/Source.RichCC/Source.RichCC/Source.RichCC.csproj
+++ b/Source.RichCC/Source.RichCC/Source.RichCC.csproj
@@ -93,6 +93,7 @@
     <Content Include="dist\min\fonts\glyphicons-halflings-regular.woff2" />
     <None Include="Properties\PublishProfiles\richcc - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\richcc - Web Deploy.pubxml" />
+    <Content Include="temp.scss" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
