--- a/Source.RichCC/Source.RichCC/package.json
+++ b/Source.RichCC/Source.RichCC/package.json
@@ -10,14 +10,15 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-debug": "^2.0.1",
-    "gulp-plumber": "^1.0.1",    
+    "gulp-plumber": "^1.0.1",
     "gulp-concat": "^2.5.2",
     "gulp-sass": "^2.0.1",
     "gulp-cssmin": "^0.1.7",
     "gulp-filter": "^2.0.2",
     "del": "^1.2.0",
     "gulp-html-js-template": "^0.1.6",
-    "gulp-minify": "^0.0.5"
+    "gulp-minify": "^0.0.5",
+    "gulp-header": "1.8.8"
   },
   "license": "MIT"
 }
